# agentic-it-support-bot

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  DATA_GENERATION_PROMPT.md  README.md  main.py  pyproject.toml
it-support-dataset/: README.md  relationships.json  tickets.json
it-support-dataset/kb/: access-certification-process.md  account-lockout-recovery.md  client-reporting-portal-access.md  device-encryption-requirements.md  document-management-system-access.md  employee-offboarding.md  employee-onboarding.md  market-data-entitlement-requests.md  mfa-enrollment.md  mfa-recovery.md  outlook-configuration.md  password-reset-procedure.md  phishing-reporting-procedure.md  portfolio-management-permissions.md  privileged-access-request-process.md  remote-access-troubleshooting.md  role-change-access-process.md  security-incident-escalation.md  shared-mailboxes.md  sso-troubleshooting.md  suspicious-login-investigation-process.md  trading-platform-access.md  vpn-certificate-renewal.md  vpn-setup.md  vpn-troubleshooting.md
src/it_support_bot/: __init__.py  cli.py  config.py
src/it_support_bot/agent/: agent.py  prompts.py
src/it_support_bot/data/: database.py  helpers.py  models.py
src/it_support_bot/llm/: base.py  openai_client.py
src/it_support_bot/retrieval/: base.py  bm25_retriever.py  chunking.py  factory.py  vector_retriever.py
src/it_support_bot/tools/: base.py  kb_tools.py  sql_tool.py
tests/: test_agent.py  test_config.py  test_database.py  test_models.py  test_retrieval.py
