[project]
name = "it-support-bot"
version = "0.1.0"
description = "Agentic RAG system for chatting with IT support tickets and knowledge base articles."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
    "openai>=1.60",
    "pydantic>=2.7",
    "rank-bm25>=0.2",
]

[project.scripts]
it-support-bot = "it_support_bot.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pre-commit>=4.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/it_support_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "B",   # bugbear (likely bugs)
    "UP",  # pyupgrade (modern syntax)
    "SIM", # simplification
]
